--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -17,3 +17,10 @@ main {
     height: 150px;
     object-fit: contain;
 }
+
+/* staff */
+
+.stafflist img {
+    height: 250px;
+    object-fit: contain;
+}
