--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -24,3 +24,10 @@ main {
     height: 250px;
     object-fit: contain;
 }
+
+/* calendar */
+
+.calendar img {
+    height: 150px;
+    object-fit: contain;
+}
